# denox

./: .gitignore  CMakeLists.txt  DEVLOG.md  PKGBUILD  README.md  bench_onnx.py  best_configs.py  concat_conv_test.py  conv_test.py  db.fbs  debugging.py  dnx.fbs  maxpool_test.py  meson.build  oidn.py  oidn_model.py  old_model.py  parse_database_csv.py  pyproject.toml  shared_memory_per_wg.py  test.py  testing.py  torch_image.py  torch_implicit_concat_flex.py  torch_multi.py  torch_onnx_export.py  torch_pixel_shuffle.py  torch_trival_model.py  upsample_test.py  x  xnd.fbs
cli/: CMakeLists.txt  compile.cpp  compile.hpp  main.cpp
cli/alloc/: monotone_alloc.cpp  monotone_alloc.hpp
cli/io/: File.cpp  File.hpp  IOEndpoint.hpp  Path.cpp  Path.hpp  Pipe.hpp
cli/parser/: action.hpp  artefact.hpp  errors.cpp  errors.hpp  parse.cpp  parse.hpp  parse_artefact.cpp  parse_artefact.hpp  parse_commands.cpp  parse_commands.hpp  parse_options.cpp  parse_options.hpp
cli/parser/actions/: bench.hpp  compile.hpp  help.hpp  infer.hpp  populate.hpp
cli/parser/artefact/: DbArtefact.hpp  DnxArtefact.hpp  OnnxArtefact.hpp
cli/parser/lex/: lex.cpp  lex.hpp
common/: CMakeLists.txt  denox_commit_hash.hpp  meson.build
common/denox/algorithm/: binary_op_permutations.hpp  bit_ceil.hpp  gcd.hpp  hash_combine.hpp
common/denox/diag/: assume.hpp  invalid_argument.hpp  invalid_state.hpp  logging.hpp  not_implemented.hpp
common/denox/io/: read_file.cpp
compiler/: CMakeLists.txt  Options.hpp  api.cpp  api_helpers.hpp  api_query_device_info.cpp  entry.cpp  entry.hpp
compiler/algorithm/: align_up.hpp  binary_op_permutations.cpp  binary_op_permutations.hpp  bit_cast.hpp  count_children.hpp  lcm.hpp  shortest_dag_hyperpath.hpp  topological_sort.hpp
compiler/algorithm/pattern_matching/: ConstGraphMatch.hpp  EdgePattern.fwd.hpp  EdgePattern.hpp  GraphPattern.hpp  GraphPatternControlBlock.hpp  LinkedGraphMatch.hpp  NodePattern.fwd.hpp  NodePattern.hpp  match.hpp
compiler/compiler/: dce.cpp  dce.hpp  freeze.cpp  freeze.hpp  impl.cpp  impl.hpp  lifeness.cpp  spec.cpp  spec.hpp  sym_compile.cpp  sym_compile.hpp  sym_table.cpp  sym_table.hpp
compiler/compiler/cano/: cano.cpp  cano.hpp
compiler/compiler/fuse/: IFusionRule.hpp  fusion.cpp  fusion.hpp
compiler/compiler/impl/: ComputeDispatchBuilder.cpp  ComputeDispatchBuilder.hpp  ComputeOpImpl.hpp  Impl.hpp  ImplBuilder.hpp  impl.cpp  impl.hpp
compiler/compiler/ir/: AdjModel.hpp  CanoModel.hpp  ConstModel.hpp  Lifetimes.hpp  LinkedModel.hpp  SpecModel.hpp  SymTable.hpp  TensorInstance.hpp
compiler/compiler/placement/: placement.cpp  placement.hpp
compiler/compiler/rebind_descriptors/: rebind_descriptors.cpp
compiler/db/: Db.cpp  Db.hpp
compiler/device_info/: ApiVersion.hpp  CoopmatProperties.hpp  DeviceInfo.hpp  LayoutRules.hpp  MemoryModel.hpp  ResourceLimits.hpp  SubgroupProperties.hpp  TypeSupport.hpp
compiler/device_info/query/: create_query_instance.cpp  create_query_instance.hpp  query_coopmat_properties.cpp  query_coopmat_properties.hpp  query_driver_device_info.cpp  query_driver_device_info.hpp  query_layout_rules.cpp  query_layout_rules.hpp  query_memory_model_properties.cpp  query_memory_model_properties.hpp  query_resource_limits.cpp  query_resource_limits.hpp  query_subgroup_properties.cpp  query_subgroup_properties.hpp  select_physical_device.cpp  select_physical_device.hpp
compiler/device_info/vulkan/: get_local_device_info.cpp  get_local_device_info.hpp
compiler/diag/: failed_to_realize.cpp  failed_to_realize.hpp  logging.cpp  logging.hpp  missing_driver_support.hpp  not_implemented.hpp  summary.cpp  summary.hpp  unreachable.hpp
compiler/dnx/: serialize.cpp  serialize.hpp
compiler/frontend/onnx/: onnx.cpp  onnx.hpp
compiler/heuristic/: DbHeuristic.hpp  IHeuristic.hpp  MemoryHeuristic.hpp
compiler/io/: read_file.cpp  read_file.hpp
compiler/io/fs/: File.cpp  File.hpp  Path.cpp  Path.hpp
compiler/model/: ActivationFunction.hpp  AutoPadMode.hpp  ComputeOp.hpp  ComputeTensor.hpp  DynamicInputExtent.hpp  FilterMode.hpp  Model.cpp  Model.hpp  ModelControlBlock.hpp  ModelMeta.hpp  PaddingMode.hpp  PoolFunction.hpp  Tensor.hpp
compiler/shaders/: GlslCompiler.cpp  GlslCompiler.hpp  IShader.hpp  global_glslang_runtime.cpp  shaders.cpp
compiler/symbolic/: Sym.hpp  SymGraph.hpp  SymGraphEval.cpp  SymGraphEval.hpp  SymGraph_add_entry.cpp  SymGraph_affine.cpp  SymGraph_affine_symbol_cache.cpp  SymGraph_api.cpp  SymGraph_api_templates.inl  SymGraph_compile.cpp  SymGraph_debug.cpp  SymGraph_div_entry.cpp  SymGraph_eval.cpp  SymGraph_helpers.cpp  SymGraph_max_entry.cpp  SymGraph_min_entry.cpp  SymGraph_mod_entry.cpp  SymGraph_modsolver.cpp  SymGraph_modsolver_cache.cpp  SymGraph_mul_entry.cpp  SymGraph_nonaffine.cpp  SymGraph_nonaffine_symbol_cache.cpp  SymGraph_sub_entry.cpp  SymGraph_types.inl  SymIR.hpp  SymRemap.hpp  Symbolic.hpp  ssym.hpp  sym.hpp  sym_vec2.hpp
database/: CMakeLists.txt  api_db.cpp
dev/utils/: meson.build
device_info/: CMakeLists.txt
onnx/: meson.build
runtime/: CMakeLists.txt  Db.cpp  Db.hpp  api.cpp  api_bench.cpp  api_bench2.cpp  api_context.cpp  api_eval.cpp  api_instance.cpp  api_model.cpp  api_queries.cpp  context.cpp  context.hpp  dnx_parse_helpers.cpp  dnx_parse_helpers.hpp  instance.hpp  meson.build  model.hpp  vma.hpp  vma_impl.cpp
runtime/shader/: CompilationError.hpp  CompilationResult.hpp  GlslCompiler.cpp  GlslCompiler.hpp  GlslCompilerInstance.cpp  GlslCompilerInstance.hpp  ShaderBinary.hpp  warmup.comp
sandbox/: CMakeLists.txt  ExtensionCoopMat.hpp  conv.cpp  conv.hpp  conv2d-2025-07-04-17.05.49.comp  conv3x3mma16x8x8f16_CHWC8_RSCKC8.comp  conv3x3mma16x8x8f16_CHWC8_RSCKC8_820us.comp  conv3x3mma16x8x8f16_CHWC8_RSCKC8_backup_820us.comp  conv3x3mma16x8x8f16_CHWC8_RSCKC8_reuse.comp  conv3x3mma16x8x8f16_CHWC8_RSCKC8_reuse_micro_700us.comp  f16.hpp  main.cpp  meson.build  old_sandbox  test.comp  vkdt-conv-no-skip.comp
sandbox/bench/: conv.hpp
spirv/: CMakeLists.txt
symbolic/: CMakeLists.txt
symbolic/test/: common.cpp  compile.cpp  eval.cpp  modsolve.cpp  negatives.cpp
(+1106 files in other folders)
